encoding output scripts to addresses

--- a/btc_utils/CMakeLists.txt
+++ b/btc_utils/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(btc_utils address.cpp block.cpp chainparams.cpp crypto.cpp script.cpp transaction.cpp)
+add_library(btc_utils address.cpp bech32.cpp block.cpp chainparams.cpp crypto.cpp script.cpp transaction.cpp)
 target_include_directories(btc_utils PUBLIC include)
 target_include_directories(btc_utils INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
