--- a/addr_parser/CMakeLists.txt
+++ b/addr_parser/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(addr_parser main.cpp)
-target_link_libraries (addr_parser PUBLIC pthread btc_utils ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES})
+target_link_libraries (addr_parser PUBLIC pthread btc_utils ${OPENSSL_LIBRARIES})
