--- a/btc_utils/CMakeLists.txt
+++ b/btc_utils/CMakeLists.txt
@@ -4,3 +4,6 @@ target_include_directories(btc_utils INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
+
+# unit tests
+add_subdirectory(test)
